--- a/example/config.json
+++ b/example/config.json
@@ -1,30 +1,10 @@
 {
-  "des": {
+  "add_lib_XXX": {
     "function": "target_link_libraries",
-    "arg": "Deu"
+    "arg": "libXXX"
   },
-  "veh": {
+  "add_lib_YYY": {
     "function": "target_link_libraries",
-    "arg": "Agent"
-  },
-  "mission-a9": {
-    "function": "target_link_libraries",
-    "arg": "MissionA9"
-  },
-  "librpcdesserver": {
-    "function": "target_link_libraries",
-    "arg": "RpcServer"
-  },
-  "messenger_transactions": {
-    "function": "target_link_libraries",
-    "arg": "MessengerTransactions"
-  },
-  "mission_synchro": {
-    "function": "target_link_libraries",
-    "arg": "MissionSynchro"
-  },
-  "navclient": {
-    "function": "target_link_libraries",
-    "arg": "NavClient"
+    "arg": "libYYY"
   }
 }
