--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install coverage
+  - pip install python-coveralls
 # command to run tests
 script:
   - coverage run -m unittest discover -s q2c
-after_success: coverage report
+after_success: 
+  - coverage report
+  - coveralls
