--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
   - coverage run -m unittest discover -s q2c
   - python setup.py install
   - q2c --help
-  - q2c example -c example/config.json example
+  - q2c -c example/config.json example
   - test -e example/CMakeLists.txt
 after_success: 
   - coverage report
