--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ install:
   - pip install python-coveralls
 # command to run tests
 script:
-  - coverage run -m unittest discover -s q2c
+  - coverage run -m unittest discover -s q2c  
   - python setup.py install
   - q2c --help
-  - q2c -c example/config.json example
+  - coverage run -m q2c.command_line -c example/config.json example
   - test -e example/CMakeLists.txt
 after_success: 
   - coverage report
